// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App.styles > AppWrapper renders a div and matches snapshot 1`] = `
.c0 {
  position: relative;
  width: 100vw;
  height: 100svh;
  overflow: hidden;
}

<div
  class="c0"
/>
`;

exports[`App.styles > ErrorBanner renders a p and matches snapshot 1`] = `
.c0 {
  margin: 0;
  background: #fff;
  border-left: 4px solid #ef4444;
  border-radius: 6px;
  padding: 10px 14px;
  font-size: 13px;
  color: #374151;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
}

<p
  class="c0"
>
  Something went wrong
</p>
`;

exports[`App.styles > MapDiv renders a div and matches snapshot 1`] = `
.c0 {
  position: absolute;
  inset: 0;
}

<div
  class="c0"
/>
`;

exports[`App.styles > OverlayTop renders a div and matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 16px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 8px;
  width: min(400px, calc(100vw - 32px));
}

<div
  class="c0"
/>
`;
